# RapidGL

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  FUNDING.yml  LICENSE  README.md  clean.bat  setup_vs2019.bat  setup_vs2022.bat
cmake/: CPM.cmake  global_settings.cmake
configuration/: root_directory.h.in
src/core/: CMakeLists.txt  animated_model.cpp  animated_model.h  camera.cpp  camera.h  common.h  core_app.cpp  core_app.h  debug_output_gl.h  filesystem.cpp  filesystem.h  geom_primitive.cpp  geom_primitive.h  input.cpp  input.h  material.cpp  material.h  mesh.cpp  mesh.h  mesh_part.h  model.cpp  model.h  shader.cpp  shader.h  static_model.cpp  static_model.h  texture.cpp  texture.h  timer.h  util.cpp  util.h  window.cpp  window.h
src/core/gui/: font.cpp  font.h  gui.cpp  gui.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
src/demos/: CMakeLists.txt
src/demos/00_template_project/: CMakeLists.txt  main.cpp  template_project.cpp  template_project.h
src/demos/01_simple_triangle/: CMakeLists.txt  main.cpp  simple_triangle.cpp  simple_triangle.frag  simple_triangle.h
src/demos/02_simple_3d/: CMakeLists.txt  main.cpp  simple_3d.cpp  simple_3d.frag  simple_3d.h  simple_3d.vert
src/demos/03_lighting/: CMakeLists.txt  lighting-ambient.frag  lighting-directional.frag  lighting-point.frag  lighting-spot.frag  lighting.cpp  lighting.glh  lighting.h  lighting.vert  main.cpp
src/demos/04_terrain/: CMakeLists.txt  lighting-ambient-terrain.frag  lighting-directional-terrain.frag  lighting-point-terrain.frag  lighting-spot-terrain.frag  lighting-spot.frag  lighting-terrain.glh  lighting.glh  main.cpp  terrain.cpp  terrain.hpp  terrain_model.cpp  terrain_model.hpp
src/demos/05_toon_outline/: CMakeLists.txt  advanced_toon.frag  main.cpp  outline_ps.frag  outline_ps.vert  outline_ps_gen_data.frag  outline_ps_gen_data.vert  outline_simple.vert  outline_stencil.frag  outline_stencil.vert  simple_toon.frag  simple_toon_rim.frag  toon.vert  toon_advanced.frag  toon_outline.cpp  toon_outline.h  toon_simple.frag  toon_twin_shade.frag  twin_shade_toon.frag
src/demos/06_simple_fog/: CMakeLists.txt  lighting-directional_w_fog.frag  main.cpp  simple_fog.cpp  simple_fog.h
src/demos/07_alpha_cutout/: CMakeLists.txt  alpha_cutout.cpp  alpha_cutout.h  lighting-directional_alpha_cutout.frag  main.cpp
src/demos/08_enviro_mapping/: CMakeLists.txt  enviro_mapping.cpp  enviro_mapping.frag  enviro_mapping.h  enviro_mapping.vert  lighting-directional.frag  main.cpp  skybox.cpp  skybox.frag  skybox.hpp  skybox.vert
src/demos/09_projected_texture/: CMakeLists.txt  lighting-ambient.frag  lighting-point.frag  lighting-spot.frag  lighting-spot.vert  lighting.vert  main.cpp  projected_texture.cpp  projected_texture.h
src/demos/10_postprocessing_filters/: CMakeLists.txt  FSQ.vert  PS_filters.frag  lighting-ambient.frag  lighting-directional.frag  main.cpp  postprocessing_filters.cpp  postprocessing_filters.h
src/demos/11_gs_point_sprites/: CMakeLists.txt  gs_point_sprites.cpp  gs_point_sprites.frag  gs_point_sprites.geom  gs_point_sprites.h  gs_point_sprites.vert  main.cpp
src/demos/12_gs_wireframe/: CMakeLists.txt  gs_wireframe.cpp  gs_wireframe.frag  gs_wireframe.geom  gs_wireframe.h  gs_wireframe.vert  main.cpp
src/demos/13_ts_curve/: CMakeLists.txt  main.cpp  ts_curve.cpp  ts_curve.frag  ts_curve.h  ts_curve.tcs  ts_curve.tes  ts_curve.vert
src/demos/14_ts_quad/: CMakeLists.txt  main.cpp  solid.frag  solid.vert  ts_quad.cpp  ts_quad.frag  ts_quad.geom  ts_quad.h  ts_quad.tcs  ts_quad.tes
src/demos/15_ts_lod/: CMakeLists.txt  main.cpp  ts_lod.cpp  ts_lod.frag  ts_lod.geom  ts_lod.h  ts_lod.tcs  ts_lod.tes  ts_lod.vert
src/demos/16_noise/: CMakeLists.txt  main.cpp  noise.cpp  noise.frag  noise.h
src/demos/17_vertex_displacement/: CMakeLists.txt  main.cpp  vs_disp.cpp  vs_disp.frag  vs_disp.h  vs_disp.vert
src/demos/18_simple_particles_system/: CMakeLists.txt  main.cpp  particles.frag  particles.vert  simple_particles_system.cpp  simple_particles_system.h
src/demos/19_instanced_particles_compute_shader/: CMakeLists.txt  instanced_particles_cs.cpp  instanced_particles_cs.h  main.cpp  particles.comp  particles.frag  particles.vert
src/demos/20_mesh_skinning/: CMakeLists.txt  main.cpp  mesh_skinning.cpp  mesh_skinning.h  simple_3d.frag  simple_3d.vert  skinning.frag  skinning.vert  skinning_dqs.vert
src/demos/21_oit/: CMakeLists.txt  main.cpp  oit.cpp  oit.h  oit.vert  oit_linked_list.frag  oit_render.frag
src/demos/22_pbr/: CMakeLists.txt  background.frag  background.vert  cubemap.vert  equirectangular_to_cubemap.frag  irradiance_convolution.frag  main.cpp  pbr-ambient.frag  pbr-directional.frag  pbr-lighting.glh  pbr-point.frag  pbr-spot.frag  pbr.cpp  pbr.h  precompute_brdf.frag  prefilter_cubemap.frag  tmo.frag
src/demos/23_gs_face_extrusion/: CMakeLists.txt  face_extrusion.geom  gs_face_extrusion.cpp  gs_face_extrusion.h  main.cpp
src/demos/24_pcss/: CMakeLists.txt  generate_shadow_map.frag  generate_shadow_map.vert  main.cpp  pbr-directional-shadow.frag  pbr-lighting-shadow.vert  pcss.cpp  pcss.h
src/demos/25_cascaded_pcss/: CMakeLists.txt  cascaded_pcss.cpp  cascaded_pcss.h  generate_csm.geom  generate_csm.vert  main.cpp  pbr-directional-shadow.frag  pbr-lighting-shadow.vert  visualize_csm_depth.frag
src/demos/26_bloom/: CMakeLists.txt  bloom.cpp  bloom.h  downscale.comp  main.cpp  upscale.comp
src/demos/27_clustered_shading/: CMakeLists.txt  area_light_geom.frag  area_light_geom.vert  area_light_ltc.glh  clustered_shading.cpp  clustered_shading.h  cull_lights.comp  depth_pass.frag  depth_pass.vert  find_unique_clusters.comp  find_visible_clusters.comp  generate_clusters.comp  main.cpp  pbr-ambient.frag  pbr-directional.frag  pbr-lighting.glh  pbr-point.frag  pbr-spot.frag  pbr_clustered.frag  pbr_lighting.glh  pbr_lighting.vert  shared.h  tmo.frag  update_cull_lights_indirect_args.comp  update_lights.comp
src/demos/simple_triangle/: CMakeLists.txt  main.cpp  simple_triangle.cpp  simple_triangle.h  simple_triangle.vert
(+8 files in other folders)
