# Copyright (C) 2020 Tomasz Gałaj

add_subdirectory(00_template_project)
add_subdirectory(01_simple_triangle)
add_subdirectory(02_simple_3d)
add_subdirectory(03_lighting)
add_subdirectory(04_terrain)
add_subdirectory(05_toon_outline)
add_subdirectory(06_simple_fog)
add_subdirectory(07_alpha_cutout)
add_subdirectory(08_enviro_mapping)
add_subdirectory(09_projected_texture)