# Copyright (C) 2020 Tomasz Gałaj

add_subdirectory(00_template_project)
add_subdirectory(01_simple_triangle)
add_subdirectory(02_simple_3d)
add_subdirectory(03_lighting)
add_subdirectory(04_terrain)
add_subdirectory(05_toon_outline)
add_subdirectory(06_simple_fog)
add_subdirectory(07_alpha_cutout)
add_subdirectory(08_enviro_mapping)
add_subdirectory(09_projected_texture)
add_subdirectory(10_postprocessing_filters)
add_subdirectory(11_gs_point_sprites)
add_subdirectory(12_gs_wireframe)
add_subdirectory(13_ts_curve)
add_subdirectory(14_ts_quad)
add_subdirectory(15_ts_lod)
add_subdirectory(16_noise)
add_subdirectory(17_vertex_displacement)
add_subdirectory(18_simple_particles_system)